Proyecto ANTLR/LabeledExpr.g4
grammar LabeledExpr;

prog:   stat+ ;

stat:   expr NEWLINE                # printExpr
    |   ID '=' expr NEWLINE         # assign
    |   NEWLINE                     # blank
    ;

expr:   expr op=(MUL|DIV) expr      # MulDiv
    |   expr op=(ADD|SUB) expr      # AddSub
    |   INT                         # int
    |   ID                          # id
    |   '(' expr ')'                # parens
    |   'sin' '(' expr ')'          # sinFunc
    |   'cos' '(' expr ')'          # cosFunc
    |   'tan' '(' expr ')'          # tanFunc
    |   'sqrt' '(' expr ')'         # sqrtFunc
    |   'ln' '(' expr ')'           # lnFunc
    |   'log' '(' expr ')'          # logFunc
    |   expr '!'                    # factorial
    ;

MUL : '*' ;
DIV : '/' ;
ADD : '+' ;
SUB : '-' ;

ID  :   [a-zA-Z]+ ;
INT :   [0-9]+ ;
NEWLINE:'\r'? '\n' ;
WS  :   [ \t]+ -> skip ;
